--- a/style.css
+++ b/style.css
@@ -901,118 +901,217 @@ a:active {
 }
 
 /* Navigation menu */
-#site-navigation-wrapper {
-	bottom: 0;
-	position: absolute;
-	width: 100%;
-}
-
-.main-navigation {
-	background: #2d2a26;
-	border-bottom: 1px solid #49443d;
-	border-top: 1px solid #49443d;
-	clear: both;
-	display: block;
-	font-family: Karla, Arial, sans-serif;
-	width: 100%;
-	z-index: 10000;
-	/* Current page highlight */
-	/* Priority+ menu */
-}
-.main-navigation li {
-	display: inline-block;
-}
-.main-navigation a {
-	color: #fcfbf9;
-	display: inline-block;
-	font-size: 12.8px;
-	font-size: 0.8rem;
-	letter-spacing: 1px;
-	padding: 12px 15px;
-	text-transform: uppercase;
-}
-.main-navigation a:hover {
-	color: #a7cbdb;
-}
-.main-navigation .current_page_item > a,
-.main-navigation .current-menu-item > a,
-.main-navigation .current_page_ancestor > a {
-	color: #e9d5c0;
-}
-.main-navigation ul {
-	display: block;
-	list-style: none;
-	margin: 0;
-	/* Sub-nav */
-}
-.main-navigation ul ul {
-	background: #11100f;
-	left: -999em;
-	position: absolute;
-	text-align: left;
-	z-index: 99999;
-}
-.main-navigation ul ul li {
-	display: block;
-}
-.main-navigation ul ul a {
-	border-top: 1px solid rgba(233, 213, 192, 0.1);
-	color: #e9d5c0;
-	display: block;
-	width: 100%;
-}
-.main-navigation #more-menu {
-	display: none;
-}
-.main-navigation #more-menu.visible {
-	display: inline-block;
-}
-.main-navigation #more-menu > a::before {
-	content: '\f476';
-	display: inline-block;
-	font-family: Genericons;
-	font-size: 16px;
-	font-style: normal;
-	font-weight: normal;
-	line-height: 1;
-	text-decoration: none;
-	vertical-align: text-bottom;
-
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	text-rendering: auto;
-}
 
 /* Mobile menu */
 @media (max-width: 767px) {
+
 	.main-navigation {
-		/* Show mobile menus when "focus" class is added via JS */
-		/* Sub-menus */
-		/* Sub-sub-menus */
-	}
-	.main-navigation a {
-		padding-left: 10px;
-	}
-	.main-navigation li.focus > ul {
-		left: 0;
-	}
-	.main-navigation ul ul {
-		border-bottom: 1px solid #49443d;
-		width: 100%;
-	}
-	.main-navigation ul ul ul {
-		border-bottom: none;
-		left: 0;
-		padding-left: 25px;
+		display: block;
 		position: relative;
+		/*top: 36px;*/
+		/*left: 50px;*/
+
+		z-index: 1;
+
+		-webkit-user-select: none;
+		user-select: none;
 	}
-	.main-navigation ul ul ul a {
-		padding-left: 0;
+
+	.main-navigation input {
+		display: block;
+		width: 40px;
+		height: 32px;
+		position: absolute;
+		top: -7px;
+		left: -5px;
+
+		margin-left: 80%;
+
+		cursor: pointer;
+
+		opacity: 0; /* hide this */
+		z-index: 2; /* and place it over the hamburger */
+
+		-webkit-touch-callout: none;
+	}
+
+	/*
+	 * Just a quick hamburger
+	 */
+	.main-navigation span {
+		display: block;
+		width: 33px;
+		height: 4px;
+		margin-bottom: 5px;
+		position: relative;
+
+		margin-left: 80%;
+
+		background: white;
+		border-radius: 3px;
+
+		z-index: 1;
+
+		transform-origin: 4px 0px;
+
+		transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+		background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+		opacity 0.55s ease;
+	}
+
+	.main-navigation span:first-child {
+		transform-origin: 0% 0%;
+	}
+
+	.main-navigation span:nth-last-child(2) {
+		transform-origin: 0% 100%;
+	}
+
+	/*
+     * Transform all the slices of hamburger
+     * into a crossmark.
+     */
+	.main-navigation input:checked ~ span {
+		opacity: 1;
+		transform: rotate(45deg) translate(-2px, -1px);
+		background: #232323;
+	}
+
+	/*
+     * But let's hide the middle one.
+     */
+	.main-navigation input:checked ~ span:nth-last-child(3) {
+		opacity: 0;
+		transform: rotate(0deg) scale(0.2, 0.2);
+	}
+
+	/*
+     * Ohyeah and the last one should go the other direction
+     */
+	.main-navigation input:checked ~ span:nth-last-child(2) {
+		transform: rotate(-45deg) translate(0, -1px);
+	}
+
+	/*
+	 * Make this absolute positioned
+	 * at the top left of the screen
+	 */
+	.menu {
+		position: absolute;
+		width: 100%;
+		margin: -100px 0 0 0;
+		padding: 50px;
+		padding-top: 125px;
+		padding-bottom: 125px;
+
+		background: white;
+		list-style-type: none;
+		-webkit-font-smoothing: antialiased;
+		/* to stop flickering of text in safari */
+
+		transform-origin: 0% 0%;
+		transform: translate(0, -100%);
+
+		transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+	}
+
+	.menu li {
+		padding: 10px 0;
+		font-size: 22px;
+	}
+
+	.menu li a {
+		color: black;
+	}
+
+	/*
+     * And let's slide it in from the left
+     */
+	.main-navigation input:checked ~ ul {
+		transform: none;
+	}
+
+	.sticky {
+		padding-top: 14px;
+		padding-bottom: 10px;
+		background-color: rgba(0, 0, 0, 0.2);
+
+		width: 100%;
+		bottom: auto;
+		position: fixed;
+		top: 0;
+	}
+	.sticky input {
+		margin-top: 14px;
 	}
 }
 
 /* Regular menu */
 @media (min-width: 768px) {
+	#site-navigation-wrapper {
+		bottom: 0;
+		position: absolute;
+		width: 100%;
+	}
+
+	.main-navigation {
+		background: #2d2a26;
+		border-bottom: 1px solid #49443d;
+		border-top: 1px solid #49443d;
+		clear: both;
+		display: block;
+		font-family: Karla, Arial, sans-serif;
+		width: 100%;
+		z-index: 10000;
+		/* Current page highlight */
+		/* Priority+ menu */
+	}
+	.main-navigation input {
+		display: none;
+	}
+	.main-navigation li {
+		display: inline-block;
+	}
+	.main-navigation a {
+		color: #fcfbf9;
+		display: inline-block;
+		font-size: 12.8px;
+		font-size: 0.8rem;
+		letter-spacing: 1px;
+		padding: 12px 15px;
+		text-transform: uppercase;
+	}
+	.main-navigation a:hover {
+		color: #a7cbdb;
+	}
+	.main-navigation .current_page_item > a,
+	.main-navigation .current-menu-item > a,
+	.main-navigation .current_page_ancestor > a {
+		color: #e9d5c0;
+	}
+	.main-navigation ul {
+		display: block;
+		list-style: none;
+		margin: 0;
+		/* Sub-nav */
+	}
+	.main-navigation ul ul {
+		background: #11100f;
+		left: -999em;
+		position: absolute;
+		text-align: left;
+		z-index: 99999;
+	}
+	.main-navigation ul ul li {
+		display: block;
+	}
+	.main-navigation ul ul a {
+		border-top: 1px solid rgba(233, 213, 192, 0.1);
+		color: #e9d5c0;
+		display: block;
+		width: 100%;
+	}
+
 	.main-navigation {
 		left: 50%;
 		max-width: 1400px;
